# NaviNIBS

./: .gitignore  LICENSE  README.md  pyproject.toml
NaviNIBS/: __init__.py
NaviNIBS/Devices/: IGTLinkToolPositionsServer.py  PlusDeviceSet_Server_NDIPolarisVega_Network_Basic.xml  PlusDeviceSet_Server_NDIPolarisVega_Serial_Cobot.xml  SimulatedToolPositionsClient.py  ToolPositionsClient.py  ToolPositionsServer.py
NaviNIBS/Navigator/: TargetingCoordinator.py
NaviNIBS/Navigator/GUI/: NavigatorGUI.py  __init__.py
NaviNIBS/Navigator/GUI/CollectionModels/: DigitizedLocationsTableModel.py  FiducialsTableModels.py  HeadPointsTableModel.py  HotkeysTableModel.py  ROIsTableModel.py  SamplesTableModel.py  TargetGridsTableModel.py  TargetsTableModel.py  ToolsTableModel.py  __init__.py
NaviNIBS/Navigator/GUI/EditWindows/: CoilCalibrationWindow.py  EditCoordinateSystemVisibility.py  ImportSessionWindow.py  PointerCalibrationWindow.py
NaviNIBS/Navigator/GUI/ViewPanels/: CameraPanel.py  CoordinateSystemsPanel.py  DigitizeLocationsPanel.py  DigitizedLocationsPanel.py  FiducialsPanel.py  HeadModelPanel.py  MRIPanel.py  MainViewPanelWithDockWidgets.py  ManageSessionPanel.py  ROIsPanel.py  SubjectRegistrationPanel.py  TargetsPanel.py  ToolsPanel.py  VisualizedROI.py  __init__.py
NaviNIBS/Navigator/GUI/Widgets/: CollectionTableWidget.py  EditGridWidget.py  EditROIStageWidgets.py  EditROIWidget.py  EditTargetWidget.py  MRIViews.py  SurfViews.py  TrackingStatusWidget.py
NaviNIBS/Navigator/Model/: Addons.py  Calculations.py  CoordinateSystems.py  DigitizedLocations.py  DockWidgetLayouts.py  GenericCollection.py  HeadModel.py  MRI.py  MiscSettings.py  ROIs.py  Samples.py  Session.py  SubjectRegistration.py  TargetGrids.py  Targets.py  Tools.py  Triggering.py
NaviNIBS/Navigator/Model/CoordinateSystems/: Affine.py  CoordinateSystem.py  CoordinateSystems.py  Nonlinear.py  Placeholder.py  SBM.py
NaviNIBS/Navigator/Model/ROIs/: AtlasSurfaceParcel.py  PipelineROI.py  __init__.py
NaviNIBS/util/: AsyncRunner.py  Asyncio.py  CoilOrientations.py  Signaler.py  Transforms.py  ZMQConnector.py  __init__.py  json.py  logging.py  numpy.py  test_attrs.py
NaviNIBS/util/GUI/: Dock.py  ErrorDialog.py  Icons.py  QAppWithAsyncioLoop.py  QCollapsibleSection.py  QFileSelectWidget.py  QFlowLayout.py  QMouseWheelAdjustmentGuard.py  QScrollContainer.py  QTableWidgetDragRows.py  QTextEdit.py  QWidgetWithCloseSignal.py  QueuedRedrawMixin.py  SpatialTransformWidget.py  StyleSheets.py
NaviNIBS/util/lsl/: LSLStreamResolver.py  LSLStreamSelector.py  __init__.py
NaviNIBS/util/pyvista/: PlotInteraction.py  __init__.py  dataset.py  plotting.py  ticks.py
NaviNIBS/util/pyvista/RemotePlotting/: RemoteLayeredPlotter.py  RemoteLayeredPlotterProxies.py  RemotePlotter.py  RemotePlotterProxy.py  __init__.py
NaviNIBS/util/test/: test_Transforms.py
NaviNIBS/util/testing/: freshness.py
RTNaBS/: __init__.py
RTNaBS/Devices/: IGTLinkToolPositionsServer.py  PlusDeviceSet_Server_NDIPolarisVega_Network_Basic.xml  PlusDeviceSet_Server_NDIPolarisVega_Serial_Basic.xml  SimulatedToolPositionsClient.py  SimulatedToolPositionsServer.py  ToolPositionsClient.py  ToolPositionsServer.py  __init__.py
RTNaBS/Navigator/: TargetingCoordinator.py
RTNaBS/Navigator/GUI/: NavigatorGUI.py
RTNaBS/Navigator/GUI/CollectionModels/: DigitizedLocationsTableModel.py  FiducialsTableModels.py  HeadPointsTableModel.py  HotkeysTableModel.py  (+4 more)
RTNaBS/Navigator/Model/: Addons.py  Calculations.py  CoordinateSystems.py  DigitizedLocations.py  DockWidgetLayouts.py  GenericCollection.py  HeadModel.py  MRI.py  Samples.py  Session.py  SubjectRegistration.py  Targets.py  Tools.py  Triggering.py
RTNaBS/util/: AsyncRunner.py  Asyncio.py  CoilOrientations.py  Signaler.py  Transforms.py  ZMQAsyncioFix.py  ZMQConnector.py  __init__.py  attrs.py  numpy.py  pyvista.py
RTNaBS/util/GUI/: Dock.py  ErrorDialog.py  IconWidget.py  QAppWithAsyncioLoop.py  QDial.py  QFileSelectWidget.py  QFlowLayout.py  QLineEdit.py  QScrollContainer.py  QTableWidgetDragRows.py  QValidators.py  QWidgetWithCloseSignal.py  QueuedRedrawMixin.py  StyleSheets.py
RTNaBS/util/lsl/: LSLStreamResolver.py  LSLStreamSelector.py  __init__.py
RTNaBS/util/pyvista/: PlotInteraction.py  RemotePlotting.py  __init__.py  dataset.py  plotting.py
RTNaBS/util/test/: test_Asyncio.py  test_Transforms.py
scripts/: GenerateSphereMesh.py  ProfileWithVizTracer.bat  RunNavigatorGUIInVirtualEnv.bat  showTestFreshness.py
tests/: pytest.ini  test_newSessionFlow.py
tests/test_NavigatorGUI/: test_LSLTriggeredSampling.py  test_MRI.py  test_ROIs.py  test_autosaveRestore.py  test_basicNavigation.py  test_collectionTableModelChangeSignals.py  test_electrodeDigitization.py  test_headModel.py  test_headRegistration.py  test_importSession.py  test_manageSession.py  test_planFiducials.py  test_setTargets.py  test_tools.py  utils.py
(+81 files in other folders)
