[tool.poetry]
name = "RTNaBS"
version = "0.0.1"
description = "Software for real-time navigated brain stimulation"
authors = ["Chris Cline <chriscline@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyzmq = "^25.1.0"
attrs = "^23.1.0"
numpy = "^1.25.1"
PySide6 = "^6.5.1.1"
pyqtgraph = "^0.13.3"
pyvista = "^0.40.1"
QtPy = "^2.3.1"
matplotlib = "^3.7.2"
QtAwesome = "^1.1.1"
appdirs = "^1.4.4"
nibabel = "^5.1.0"
pytransform3d = "^3.2.0"
pandas = "^2.0.3"
pyvistaqt = "^0.11.0"
pyigtl = "^0.3.1"
jsbeautifier = "^1.14.6"
pylsl = "^1.16.0"
scikit-spatial = "^6.4.1"
simpleicp = "^2.0.12"
pytest-asyncio = "^0.21.1"
pytest-pycharm = "^0.7.0"
nitransforms = "^23.0.1"
keyboard = {git = "https://github.com/chriscline/keyboard.git"}
darkdetect = "^0.8.0"
rmsd = "^1.5.1"
aioconsole = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
